fix bugs about CSS contain and getViewBox
* Chrome 96+ have disabled propagation of body style to viewport when contained
  * https://chromestatus.com/features/5663240823504896
* fix support for `contain: layout` on docEl since C70
* viewBox: fix a bug when computing maxLeft
  * `zoom` should not be divided twice
  * This reverts commit 4ecab9d42033859b0d2063b2b6d9c2ecd304e8e8
* also fix hint markers may cause a page show scrollbars
  * Some markers may has `.style.maxWidth`, so border-box is necessary
  * This reverts commit b0b65e2dceaf7150d1a5c9a4d6cd74ce897b0c74

--- a/front/vimium-c.css
+++ b/front/vimium-c.css
@@ -8,8 +8,8 @@ text-shadow:none;text-transform:none;visibility:visible;white-space:normal;word-
 color:#000;contain:layout style;direction:ltr;font:12px/1 "Helvetica Neue",Helvetica,Arial,sans-serif;
 pointer-events:none;position:fixed;user-select:none;z-index:2147483647}
 .HM{font-weight:bold;position:absolute;white-space:nowrap}.DLG::backdrop{background:#0000}
-.LH{background:linear-gradient(#fff785,#ffc542);border:0.01px solid #e3be23;border-radius:3px;
-box-shadow:0 3px 5px #0000004d;contain:layout style;overflow:hidden;padding:2.5px 3px 2px;position:absolute}
+.LH{background:linear-gradient(#fff785,#ffc542);border:0.01px solid #e3be23;border-radius:3px;box-shadow:0 3px
+ 5px #0000004d;box-sizing:border-box;contain:layout style;overflow:hidden;padding:2.5px 3px 2px;position:absolute}
 .IH{background:#fff7854d;border:0.01px solid #c38a22;position:absolute}.IHS{background:#f664;border-color:#933}
 .HUD{bottom:-1px;font-size:14px;height:20px;line-height:16px;max-width:336px;min-width:152px;overflow:hidden;
 padding:4px 4px 1px;right:152px;text-overflow:ellipsis;white-space:nowrap}
